syntax = "proto3";
option go_package = "github.com/haroun-djudzman/muntah/proto";

service Muntah {
    rpc GetMuntah(GetMuntahRequest) returns (GetMuntahResponse) {}
}

message GetMuntahRequest {
    int32 index = 1;
}

message GetMuntahResponse {
    bytes muntah = 1;
}